css/main.css
.day {
    --text:#363640;
    --background:#ffffff;
    --accent-one:#2b2d42;
    --accent-two:#d90429;
    --accent-three:#8d99ae;
    --accent-text:#ffffff;
    --transparency:rgba(255,255,255,0.8);
    --shadow:rgba(25,25,25,0.1);
    --menu:#2b2d42;
    --highlight:#ef233c;
}

.night {
    --text:#edf2f4;
    --background:#272730;
    --accent-one:#ef233c;
    --accent-three:#2b2d42;
    --accent-two:#8d99ae;
    --accent-text:#ffffff;
    --transparency:rgba(25,25,25,0.5);
    --shadow:rgba(240,240,240,0.1);
    --menu:#d90429;
    --highlight:#8d99ae;
}

@supports (not (-webkit-backdrop-filter:none)) and (not (backdrop-filter:none)) {
    .day {
        --transparency:rgba(255, 255, 255, 0.8);
    }
    .night {
        --transparency:rgba(25, 25, 25, 0.8);
    }
}

*[class^="ph-"]:before {
    display:block;
}

@keyframes blinkblink {
	from {
		opacity: 0;
	}
	to {
		opacity: 1;
	}
}

@keyframes softblink {
	from {
		opacity: 0.9;
	}
	to {
		opacity: 1;
	}
}

body {
    color:var(--text);
	background-attachment:fixed;
	font:400 1em/1.7em "Rubik",sans-serif;
    margin:0;
    padding:0;
    transition:0.4s ease-in-out;
    padding-bottom:9vw; /*clouds*/
    overflow-x:hidden;
}

.day {
	background-color:#fff;
	/* background-image:radial-gradient(220% 105% at bottom center, #eaeaea 10%, #f6f6f6 40%, #fcfcfc 65%, #fff); */
}

.night {
	background-color:#151515;
	background-image:radial-gradient(220% 105% at top center, #272730 10%, #212121 40%, #161616 65%, #0c0c0c);
}

bold,strong {
    font-weight:bold;
    color:var(--accent-one);
}

italic,em {
    font-style:italic;
    color:var(--highlight);
}

a, a:visited {
    color:inherit;
    text-decoration:none;
    transition:0.2s ease-in-out;
}

a:hover {
    color:var(--accent-two);
}

/* tooltips */

.ui-tooltip {position:absolute; z-index:214748364789;}
 
.ui-tooltip-content {
    margin:5px 25px;
    max-width:300px;
    padding:5px 10px;
    text-transform:uppercase;
    background:var(--accent-one);
    color:var(--accent-text);
    font:1rem/1.5rem "Ailerons",sans-serif;
    letter-spacing:-0.1em;
}

#stars, #stars2, #stars3 {
    border-radius:100%;
}

/* selection */

::selection {
    background:var(--accent-two);
    color:var(--accent-text);
}

::-webkit-selection {
    background:var(--accent-two);
    color:var(--accent-text);
}

::-moz-selection {
    background:var(--accent-two);
    color:var(--accent-text);
}

/* top */

#top {
    position:fixed;
    width:100%;
    top:0;
    left:0;
    padding:0;
    z-index:999;
    background:var(--transparency);
    backdrop-filter:blur(5px);
    -webkit-backdrop-filter:blur(5px);
    border-bottom:1px solid var(--accent-three);
    transition:0.4s ease-in-out;
    min-height:50px;
}

.night #top {
    border-bottom-color:rgba(255,255,255,0.2);
}

#pubs {
    overflow:hidden;
    max-height:30px;
    padding:0 90px;
    margin:10px 0;
    font-size:0.8em;
    font-weight:400;
    text-transform:uppercase;
    letter-spacing:0.1em;
    list-style:none;
    transition:0.4s ease-in-out;
    color:var(--text);
}

#pubs li {
    display:block;
    height:30px; 
    line-height:30px;
    padding:0;
} 

#pubs li a {
    transition-duration:0s;
    display:inline-block;
    position:relative;
    line-height:100%;
}

#pubs li a * {
    display:inline-block;
    vertical-align:middle;
}

#pubs li a i[class*="ph"] {
    font-size:18px;
}

#pubs:hover {
    max-height:200px;
    padding-bottom:10px;
    margin-bottom:0;
}

#right {
    position:fixed;
    right:90px; 
    top:0px;
    height:50px;
    line-height:50px;
    z-index:100000
}

#right a {
    display:inline-block;
    vertical-align:middle;
    height:32px;
    padding:4px 5px;
    line-height:32px;
    font-size:32px;
} 

#right a:hover {
    color:var(--accent-two);
}

#right .popp {
    display:none;
}
 
#top.active {
    background:var(--menu);
    border-bottom-color:transparent;
}
 
#top.active #pubs {
    color:var(--accent-text);
}

#top.active #pubs a {
    color:var(--accent-text);
}

#top.active #pubs a:hover {
    background:var(--accent-two);
    color:var(--accent-text);
} 

/* animation */

.blink-left,
.blink--right {
    position:relative;
}

.blink-left::before,
.blink-right::after {
	content:"";
	position:absolute;
	width:1em;
	height:100%;
	opacity:0;
    margin:0px 5px;
    background:var(--accent-two);
	animation:none;
}

.blink-left::before {
	right:100%;
}

.blink-right::after {
	left:100%;
}

.blink-left:hover::before,
.blink-right:hover::after {
	animation:blinkblink 0.4s cubic-bezier(0.5,0,1,1) infinite alternate;
}

main {
    width:100%;
    box-sizing:border-box;
    margin:150px auto 30px;
    padding:0 90px;
}

/* header */

header {
    max-width:55rem;
}

header h1 {
    font:normal 300 6rem/6rem "Rubik",sans-serif;
    margin:0 0 1rem;
    color:var(--accent-one);
}

header h1 span {
    color:var(--highlight);
    font-family:"Rubik Glitch",sans-serif;
    font-weight:normal;
}

header h1 span i {
    display:inline-block;
    vertical-align:middle;
    line-height:6rem;
    font-size:6rem;
    margin-bottom:0.25em;
}

header h2 {
    font:normal 1.2rem/2rem "Rubik",sans-serif;
    text-transform:uppercase;
    position:relative;
    display:inline-block;
    padding-left:1em;
    margin-left:5px;
    color:var(--accent-one);
}

header h2 a {
    display:inline-block;
}

.day .blink-left[data-id="day"]::before {
	animation:blinkblink 0.4s cubic-bezier(0.5,0,1,1) infinite alternate;
}

.night .blink-left[data-id="night"]::before {
	animation:blinkblink 0.4s cubic-bezier(0.5,0,1,1) infinite alternate;
}

header h2 span {
    color:var(--accent-three);
}

/* nav */

.day #n,
.night #d,
.night .d:not(.n),
.day .n:not(.d) {
    display:none!important;
}

.iso {
    margin:3em 0;
}
/* ... */

